@@ -23,3 +23,7 @@
 		it will send the total amount of quests as well as the number of completed quests.
 		The receiving end will then convert these to percent and grab a rank from their
 		client accordingly.
+	Sunday 19/1-2014
+	-	Added user created questions
+	Monday 20/1-2014
+	-	Fixed a bug with group questions still using old prefix to broadcast data
